k8s/service-ollama.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: llm-devops
  labels:
    app: ollama
spec:
  type: ClusterIP
  selector:
    app: ollama
  ports:
    - name: http
      port: 11434
      targetPort: 11434
