k8s/service-webui.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: llm-devops
  labels:
    app: open-webui
spec:
  type: ClusterIP
  selector:
    app: open-webui
  ports:
    - name: http
      port: 8080
      targetPort: 8080
